commit delle 13: fixed spacing nav mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,8 +193,8 @@ li, a, span {
         }
         .mble-nav-aside {
             height: 100%;
+            padding: 0 0.9rem;
             display: flex;
-            align-items: center;
             flex-direction: column;
             justify-content: space-between;
         }
